--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -19,7 +19,9 @@
    "id": "c379c20a",
    "metadata": {},
    "source": [
-    "# Question 1"
+    "# Question 1\n",
+    "\n",
+    "What's the version of Pandas that you installed?"
    ]
   },
   {
@@ -76,7 +78,9 @@
    "id": "849a1617",
    "metadata": {},
    "source": [
-    "# Question 2"
+    "# Question 2\n",
+    "\n",
+    "How many records are in the dataset?"
    ]
   },
   {
@@ -276,7 +280,9 @@
    "id": "06b460c2",
    "metadata": {},
    "source": [
-    "# Question 3"
+    "# Question 3\n",
+    "\n",
+    "How many fuel types are presented in the dataset?"
    ]
   },
   {
@@ -305,7 +311,9 @@
    "id": "2f5c559f",
    "metadata": {},
    "source": [
-    "# Question 4"
+    "# Question 4\n",
+    "\n",
+    "How many columns in the dataset have missing values?"
    ]
   },
   {
@@ -355,7 +363,9 @@
    "id": "0019c3b5",
    "metadata": {},
    "source": [
-    "# Question 5"
+    "# Question 5\n",
+    "\n",
+    "What's the maximum fuel efficiency of cars from Asia?"
    ]
   },
   {
@@ -531,7 +541,14 @@
    "id": "6cfb77c6",
    "metadata": {},
    "source": [
-    "# Question 6"
+    "# Question 6\n",
+    "\n",
+    "1. Find the median value of `horsepower` column in the dataset.\n",
+    "2. Next, calculate the most frequent value of the same `horsepower` column.\n",
+    "3. Use `fillna` method to fill the missing values in `horsepower` column with the most frequent value from the previous step.\n",
+    "4. Now, calculate the median value of `horsepower` once again.\n",
+    "\n",
+    "Has it changed?"
    ]
   },
   {
@@ -645,7 +662,17 @@
    "id": "a61d9a87",
    "metadata": {},
    "source": [
-    "# Question 7"
+    "# Question 7\n",
+    "\n",
+    "1. Select all the cars from Asia\n",
+    "2. Select only columns `vehicle_weight` and `model_year`\n",
+    "3. Select the first 7 values\n",
+    "4. Get the underlying NumPy array. Let's call it `X`.\n",
+    "5. Compute matrix-matrix multiplication between the transpose of `X` and `X`. To get the transpose, use `X.T`. Let's call the result `XTX`.\n",
+    "6. Invert `XTX`.\n",
+    "7. Create an array `y` with values `[1100, 1300, 800, 900, 1000, 1100, 1200]`.\n",
+    "8. Multiply the inverse of `XTX` with the transpose of `X`, and then multiply the result by `y`. Call the result `w`.\n",
+    "9. What's the sum of all the elements of the result?\n"
    ]
   },
   {
