--- a/04-evaluation/homework.ipynb
+++ b/04-evaluation/homework.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "eddd2521",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
     "columns=['age', 'job', 'marital', 'education', 'balance', 'housing', 'contact', 'day', 'month', 'duration', 'campaign', 'pdays', 'previous', 'poutcome', 'y'] # no 'default', 'loan'\n",
     "\n",
     "categorical_columns = list(set(df.dtypes[(df.dtypes == 'object') & (df.columns != 'y')].index) & set(columns))\n",
-    "numerical_columns = list(set(df.dtypes[(df.dtypes != 'object') & (df.columns != 'converted')].index) & set(columns))"
+    "numerical_columns = list(set(df.dtypes[(df.dtypes != 'object') & (df.columns != 'y')].index) & set(columns))"
    ]
   },
   {
